test/scc/ext/tm/semantic-errors/007.t
void test()
{
    volatile int a;
    _Atomic
        a = 1;
}